@@ -432,7 +432,7 @@ QVariant GPSItemContainer::data(const int column, const int role) const
             return QString();
         }
 
-        return QString::fromLatin1("%1").arg(m_gpsData.getCoordinates().lat(), 7);
+        return QString::fromLatin1("%1").arg(QLocale().toString(m_gpsData.getCoordinates().lat()), 7);
     }
     else if ((column == ColumnLongitude) && (role == Qt::DisplayRole))
     {
@@ -441,7 +441,7 @@ QVariant GPSItemContainer::data(const int column, const int role) const
             return QString();
         }
 
-        return QString::fromLatin1("%1").arg(m_gpsData.getCoordinates().lon(), 7);
+        return QString::fromLatin1("%1").arg(QLocale().toString(m_gpsData.getCoordinates().lon()), 7);
     }
     else if ((column == ColumnAltitude) && (role == Qt::DisplayRole))
     {
