@@ -29,4 +29,5 @@ BUGFIXES:
 017 ==> 424952 - ERR_CERT_AUTHORITY_INVALID on accessing many component from within digiKam.
 018 ==> 440313 - digiKam 7.3.0 FTBFS with Qt 5.9.5 [patch].
 019 ==> 440363 - Missing entry field for State/Province in Metadata Editor.
-020 ==> 
+020 ==> 440365 - digiKam geolocation editor decimal separator broken in some locales.
+021 ==> 
